<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rohit.login.Subject">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter Subject and Period"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/sub"
        android:hint="@string/subject_name"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/period"
        android:textColor="@android:color/black"
        android:id="@+id/period"
        android:layout_below="@+id/sub"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button2"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:onClick="getdata"
        android:layout_below="@+id/from"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/from"
        android:layout_below="@+id/period"
        android:layout_alignParentStart="true"
        android:hint="@string/from"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/to"
        android:layout_alignTop="@+id/from"
        android:layout_alignParentEnd="true"
        android:hint="@string/to"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dash"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/from"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@+id/from"
        android:layout_marginLeft="20dp"/>




</RelativeLayout>
