<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rohit.login.Year">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_year"
        android:id="@+id/textView4"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1st_year"
        android:id="@+id/firstyr"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:onClick="select"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2nd_year"
        android:id="@+id/secondyr"
        android:onClick="select"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/firstyr"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3rd_year"
        android:id="@+id/thirdyr"
        android:onClick="select"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/secondyr"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_4th_year"
        android:id="@+id/fourthyr"
        android:onClick="select"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/thirdyr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>
</RelativeLayout>
