<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rohit.login.Section">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/year"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_section"
        android:id="@+id/textView9"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/year"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cse_a"
        android:id="@+id/csea"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:onClick="fetch"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cse_b"
        android:id="@+id/cseb"
        android:onClick="fetch"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/csea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cse_c"
        android:id="@+id/csec"
        android:onClick="fetch"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/cseb"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cse_d"
        android:id="@+id/csed"
        android:onClick="fetch"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/csec"
        android:layout_marginTop="30dp"
        android:padding="20dp"/>
</RelativeLayout>
